# biotac_sim_plugin

./: CITATION.cff  README.md
biotac_sim/: CMakeLists.txt  package.xml
biotac_sim/include/sim_biotac/: neural_network.h  sim_biotac.h
biotac_sim/src/: sim_biotac.cpp  test.cpp
biotac_sim_demo/: CMakeLists.txt  package.xml  setup.py
biotac_sim_demo/examples/: biotac_sim_demo.py
biotac_sim_demo/launch/: biotac_sim_demo.launch
biotac_sim_demo/robots/: load_robot_description.launch  shadow_hand.launch  shadow_hand.urdf.xacro
biotac_sim_lib/: CMakeLists.txt  package.xml
biotac_sim_lib/include/biotac_sim_lib/: biotac_sim_lib.hpp  helpers.hpp  neural_network.hpp
biotac_sim_lib/scripts/: set_default_model
biotac_sim_lib/src/: biotac_sim_lib.cpp  neural_netowork.cpp
biotac_sim_motorhand/: CMakeLists.txt
biotac_sim_motorhand/launch/: sim_biotac_motorhand_1.launch
biotac_sim_motorhand/robots/: sim_biotac_motorhand_1.urdf.xacro
biotac_sim_plugin/: CMakeLists.txt  package.xml
biotac_sim_train/: CMakeLists.txt
biotac_sim_train/src/: sim_biotac_train_adjust.cpp  sim_biotac_train_extract.cpp
models/cube/: model.config  model.sdf
models/sphere/: model.sdf
worlds/: biotac_sim_demo.world
