<?xml version="1.0"?>
<package format="2">
    
  <name>biotac_sim_demo</name>
  <version>0.0.0</version>
  <description>Examples for the BioTac simulation plug-in
    (biotac_sim_lib)</description>

  <maintainer email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</maintainer>
  <author email="ruppel@informatik.uni-hamburg.de">Philipp Ruppel</author>
  <author email="jonetzko@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>
    ...</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>sr_robot_msgs</depend>
  <depend>biotac_sim_lib</depend>

  <export>
  </export>

</package>