<?xml version="1.0"?>
<package format="2">

	<name>biotac_sim_plugin</name>
	<version>1.0.0</version>
	<description>A metapackage for simulating the tactile data from BioTac sensors mounted on a Shadow Dextereous Hand</description>

	<author email="vista17@student.sdu.dk">Victor Staven</author>
	<maintainer email="vista17@student.sdu.dk">Victor Staven</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/vmstavens/biotac_sim_plugin</url>

	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>biotac_sim_lib</exec_depend>
	<exec_depend>biotac_sim_demo</exec_depend>

	<export>
		<metapackage />
	</export>

</package>